vrode grafi rabotout